_includes/manuals/1.1/3.4_install_from_source.md

Installing the latest development code:
Foreman has now moved to using Rails 3 and Bundler to get up and running. This is the preferred way to get Foreman if you want to benefit from the latest improvements. By using the git repository you can also upgrade more easily. You will need to have Bundler installed manually for now (check your distribution repositories, or install it via rubygems).

to get latest "development" version do:

You will want to make sure that you have one of the *mysql-devel*, *postgresql-devel*, and *sqlite-devel* libraries installed so the database gems can install properly. 
also, you would also need *gcc*, *ruby-devel*, *libxml-devel*, *libxslt-devel*, and *libvirt-devel* packages

Additionally, it is important that `config/database.yml` is set to use
the correct database in the "production" block. Rails (and subsequently
Foreman) will use these connection settings under "production" to manage
the database it uses and setup the necessary schema.

{% highlight bash %}
git clone https://github.com/theforeman/foreman.git -b develop
cd foreman
# must have the bundler gem installed -- gem install bundle
bundle install --without mysql mysql2  sqlite test --path vendor # or postgresql
cp config/settings.yaml.example config/settings.yaml
cp config/database.yml.example config/database.yml
RAILS_ENV=production bundle exec rake db:migrate # (to set up database schema)
{% endhighlight %}

You can run Foreman with the command *"./script/rails s -e production"*

### Latest stable version

to get latest "stable" version do:

{% highlight bash %}
git clone https://github.com/theforeman/foreman.git -b 1.0-stable
cd foreman
git submodule init
git submodule update
{% endhighlight %}

If you are behind a proxy or firewall and don't have access to Github
using the git protocol, use http protocol instead: 

{% highlight bash %}
git clone https://github.com/theforeman/foreman.git foreman
cd foreman
sed -i 's/git:\/\//http:\/\//g' .gitmodules
git submodule init
git submodule update
{% endhighlight %}
