_includes/manuals/1.2/3.4_install_from_source.md

Installing the latest development code:
Foreman has now moved to using Rails 3 and Bundler to get up and running. This is the preferred way to get Foreman if you want to benefit from the latest improvements. By using the git repository you can also upgrade more easily. You will need to have Bundler installed manually for now (check your distribution repositories, or install it via rubygems).

Foreman will run with the following requirements (aside from rubygem dependencies):

* Ruby 1.8.7 or 1.9
* rubygems
* Puppet >= 0.24.4

The installation has been successfully tested on RHEL[5,6], Fedora[13,14,15,16,17], Debian Linux 6.0 (Squeeze) and Ubuntu Linux 12.04 (the community has reported varying success with other Debian/Ubuntu versions - 12.10 seems fine for example). For older operating systems you might need additional packages (e.g. sqlite).  It is also known to work on Solaris and Mac.

to get latest "development" version do:

You will want to make sure that you have one of the *mysql-devel*, *postgresql-devel*, and *sqlite-devel* libraries installed so the database gems can install properly. 
also, you would also need *gcc*, *ruby-devel*, *libxml-devel*, *libxslt-devel*, and *libvirt-devel* packages

Additionally, it is important that `config/database.yml` is set to use
the correct database in the "production" block. Rails (and subsequently
Foreman) will use these connection settings under "production" to manage
the database it uses and setup the necessary schema.

{% highlight bash %}
git clone https://github.com/theforeman/foreman.git -b develop
cd foreman
cp config/settings.yaml.example config/settings.yaml
cp config/database.yml.example config/database.yml
gem install bundler
# depending on database configured in yml file you can skip others
# (we are assuming sqlite to be configured)
bundle install --without mysql mysql2 postgresql test --path vendor
# set up database schema, precompile assets and locales
RAILS_ENV=production bundle exec rake db:migrate assets:precompile locale:pack
{% endhighlight %}

You can run Foreman with the command *"./script/rails s -e production"*

### Latest stable version

to get latest "stable" version do:

{% highlight bash %}
git clone https://github.com/theforeman/foreman.git -b 1.0-stable
cd foreman
git submodule init
git submodule update
{% endhighlight %}

If you are behind a proxy or firewall and don't have access to Github
using the git protocol, use http protocol instead: 

{% highlight bash %}
git clone https://github.com/theforeman/foreman.git foreman
cd foreman
sed -i 's/git:\/\//http:\/\//g' .gitmodules
git submodule init
git submodule update
{% endhighlight %}
